src/styles/home-headline-slider.scss
@import "src/styles/variables.scss";
.el-carousel{
    z-index: 1;
}
.el-carousel__item{
  
}

.image-hl{
  width: 100%;
  max-height: 300px;
  //height: 100%;
  object-fit: cover;
}

h2{
  position: absolute;
  top: 3%;
  left: 3%;
  text-align: center;
  color: #FFF;
  background-color: $main-blue;
  padding: 8px 10px 5px 10px;
  text-transform: uppercase;
  font-size: 1em;
}

.share{
    // padding: 10px 0 5px 0;
    position: absolute;
    bottom: 20px;

}

.info{	
	width: 100%;
    padding: 20px;
    color: $black-2;
    // min-height: 143px;
    background-color: #FFF;
    .headline{        
        margin: 0 0 10px 0;
        font-size: 1.5em;
    }
    .teaser{
        font-size: 0.9em;
        line-height: 1.2em;
        margin: 0; padding-bottom: 5px;
        text-align: justify;
    }
    .author{
        margin: 0; padding: 0;
        font-family: 'Neosans';
        font-size: 12px;
        font-weight: 900;
    }
}
@media (min-width: 320px) and (max-width: 480px) {
    h2{
        font-size: 0.8em;
    }    
    .image-hl{
        width: 100%;
        max-height: 150px;       
        object-fit: cover;
    }
    .info{        
        padding: 10px;        
        .headline{
            font-size: 1em;
        }
        .teaser{
            font-size: 0.8em;
            line-height: 1em;            
        }
        .author{           
            font-size: 0.75em;            
        }
    }
    .share{
        position: relative;
        display: block;
        bottom: 0;
        margin-top: 10px;
    }
}

